apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'
apply plugin: 'kotlin-android-extensions'
apply plugin: 'io.fabric'
apply plugin: 'com.google.gms.google-services'

// the open cv native libs are added as a submodule to the repo, so that they are downloaded
// automatically.
def path_to_opencv_native = new File(getProjectDir(), "../opencv_libs/sdk/native")

android {

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    compileSdkVersion 30
    defaultConfig {
        applicationId "at.ac.tuwien.caa.docscan"
        minSdkVersion 16
        targetSdkVersion 30
        versionCode 156
        versionName "1.7.54"

        multiDexEnabled true
//		this is used to show the build time in the AboutActivity
        buildConfigField "long", "TIMESTAMP", System.currentTimeMillis() + "L"
        // we need vectorDrawables.useSupportLibrary to get rid of this error:
//		References to other resources are not supported by build-time PNG generation
        vectorDrawables.useSupportLibrary = true
        testInstrumentationRunner = 'androidx.test.runner.AndroidJUnitRunner'

        ndk {
            // Specifies the ABI configurations of your native
            // libraries Gradle should build and package with your APK.
//            Note this also effects externalNativeBuild.cmake, so we do not to define this anymore:
            abiFilters 'armeabi-v7a', 'arm64-v8a'
//			abiFilters 'x86'
        }
        externalNativeBuild {
            cmake {
                // specify the path for the opencv native files and pass it to CMakeLists.txt as
                // argument
                arguments "-DPATH_TO_OPENCV_NATIVE:STRING=${path_to_opencv_native}"
            }
        }
    }

    externalNativeBuild {
        cmake {
            path "CMakeLists.txt"
        }
    }

    ext.enableCrashlytics = true

    buildTypes {
//        The dropbox api key is hidden based on the 2nd example in this post:
//        https://rammic.github.io/2015/07/28/hiding-secrets-in-android-apps/
//        If you want to receive the api key, please send a mail to docscan@cvl.tuwien.ac.at
        debug {
            buildConfigField "String", "DropboxApiKey", "\"${getProps("DropboxApiKey")}\""
            resValue 'string', "dropbox_api_key", "\"${getProps("DropboxManifestApiKey")}\""
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            buildConfigField "String", "DropboxApiKey", "\"${getProps("DropboxApiKey")}\""
            resValue 'string', "dropbox_api_key", "\"${getProps("DropboxManifestApiKey")}\""
//			Uncomment this line if you want to run a release configuration without signing:
            signingConfig debug.signingConfig
        }
    }

    flavorDimensions "version"

    productFlavors {
        // When building a variant that uses this flavor, the following configurations
        // override those in the defaultConfig block.
        dev {
            // To avoid using legacy multidex when building from the command line,
            // set minSdkVersion to 21 or higher. When using Android Studio 2.3 or higher,
            // the build automatically avoids legacy multidex when deploying to a device running
            // API level 21 or higher—regardless of what you set as your minSdkVersion.
//			applicationID "at.ac.tuwien.caa.docscan"
            dimension "version"
//			minSdkVersion 21
            versionNameSuffix "-dev"
//			applicationIdSuffix '.dev'
        }

        prod {
            // If you've configured the defaultConfig block for the release version of
            // your app, you can leave this block empty and Gradle uses configurations in
            // the defaultConfig block instead. You still need to create this flavor.
            // Otherwise, all variants use the "dev" flavor configurations.
            dimension "version"

        }
    }

    // Fixed build error : Duplicate files copied in APK META-INF/xxx
    packagingOptions {

        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/LICENSE.txt'
    }
    lintOptions {
        abortOnError false
    }

    useLibrary 'android.test.runner'

    testOptions {
        // Encapsulates options for local unit tests.
        unitTests {
            // By default, local unit tests throw an exception any time the code you are testing tries to access
            // Android platform APIs (unless you mock Android dependencies yourself or with a testing
            // framework like Mockito). However, you can enable the following property so that the test
            // returns either null or zero when accessing platform APIs, rather than throwing an exception.
            returnDefaultValues true

            // Encapsulates options for controlling how Gradle executes local unit tests. For a list
            // of all the options you can specify, read Gradle's reference documentation.
            all {
                // Sets JVM argument(s) for the test JVM(s).
                jvmArgs '-XX:MaxPermSize=256m'

                // You can also check the task name to apply options to only the tests you specify.
                if (it.name == 'testDebugUnitTest') {
                    systemProperty 'debug', 'true'
                }
            }
        }
    }

//	buildToolsVersion '27.0.3'
}


def getProps(String propName) {

    def propsFile = rootProject.file('api_info.txt')
    if (propsFile.exists()) {
        def props = new Properties()
//		if (props.hasProperty(propName)) {
        props.load(new FileInputStream(propsFile))
        def prop = props[propName]
        if (prop != null)
            return prop
    }
    return "default_value"

}


dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    testImplementation 'junit:junit:4.13'
    androidTestImplementation 'androidx.test:core:1.2.0'

//	kapt("groupId:artifactId:version")

//    Took this lines from:
//    https://medium.com/androiddevelopers/write-once-run-everywhere-tests-on-android-88adb2ba20c5
    androidTestImplementation('androidx.test:runner:1.2.0')
    androidTestImplementation('androidx.test.ext:junit:1.1.1')
    androidTestImplementation('androidx.test.espresso:espresso-intents:3.2.0')
    androidTestImplementation('androidx.test.espresso:espresso-core:3.2.0')
    androidTestImplementation('androidx.test.ext:truth:1.2.0')
    testImplementation('org.robolectric:robolectric:4.3.1')
    testImplementation('org.robolectric:robolectric:4.3.1')

    android {
        testOptions.unitTests.includeAndroidResources = true
    }

    implementation 'com.github.hollaus:OpenCVLibrary:1.0'
    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'com.dropbox.core:dropbox-core-sdk:3.1.3'
    implementation 'androidx.exifinterface:exifinterface:1.3.1'
//    implementation 'androidx.exifinterface:exifinterface:1.3.1'
    implementation 'androidx.preference:preference:1.1.0'
    implementation 'androidx.cardview:cardview:1.0.0'
//	TODO: check here for a stable version. The reason we switch here to beta is badge support:
//	https://github.com/material-components/material-components-android/releases
    implementation 'com.google.android.material:material:1.2.0-alpha03'
    implementation 'androidx.gridlayout:gridlayout:1.0.0'
    implementation 'com.android.volley:volley:1.1.0'
    implementation 'com.firebase:firebase-jobdispatcher:0.8.6'
    implementation 'com.google.firebase:firebase-core:17.2.1'
    implementation 'com.google.firebase:firebase-ml-vision:24.0.1'
    implementation 'com.itextpdf:itextg:5.5.10'
    implementation 'com.github.smart-fun:XmlToJson:1.4.0'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.3.0'
    implementation 'com.koushikdutta.ion:ion:3.0.8'
    implementation 'com.google.android.gms:play-services-auth:17.0.0'
    // we need this for the ProviderInstaller
    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
    implementation 'com.github.bumptech.glide:glide:4.10.0'
    kapt 'com.github.bumptech.glide:compiler:4.10.0'
    kapt 'androidx.annotation:annotation:1.1.0'
    //	implementation project(':openCVLibrary')
    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
    implementation 'me.drakeet.support:toastcompat:1.1.0'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    // Check for v11.4.2 or higher
    implementation 'com.google.firebase:firebase-core:17.2.1'
    // Add dependency
    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0', {
        exclude group: 'com.android.support', module: 'support-annotations'
    }
    androidTestImplementation 'androidx.test:rules:1.2.0'
    androidTestImplementation "android.arch.core:core-testing:1.1.1"
    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0', {
        exclude group: 'com.android.support', module: 'support-annotations'
        exclude group: 'com.android.support', module: 'support-v4'
        exclude group: 'com.android.support', module: 'design'
        exclude group: 'com.android.support', module: 'support-compat'
        exclude group: 'com.android.support', module: 'support-core-utils'
        exclude group: 'com.android.support', module: 'recyclerview-v7'
    }
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
    implementation 'android.arch.navigation:navigation-ui:1.0.0'
    implementation 'it.xabaras.android.espresso:recyclerview-child-actions:1.0'

}
repositories {
    mavenCentral()
}

apply plugin: 'com.google.gms.google-services'